[package]
name = "gtp-ddos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
blake3 = "1.5.0"
tokio = { version = "1.33.0", features = ["full"] }
borsh = { version = "1.1.1", features = ["derive"] }
