[package]
name = "gtp-ddos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
blake3 = "1.5.0"
tokio = { version = "1.33.0", features = ["full"] }
serde_json = { version = "1.0.108" }
serde = { version = "1.0.190", features = ["derive"] }
tiny_http = "0.12.0"
dashmap = "5.5.3"
