[package]
name = "gtp-ddos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
[[bin]]
name = "guide"
[[bin]]
name = "quote_server"

[dependencies]
rand = "0.8.5"
blake3 = "1.5.0"
tokio = { version = "1.33.0", features = ["full"] }
serde_json = { version = "1.0.108" }
serde = { version = "1.0.190", features = ["derive"] }
tiny_http = "0.12.0"
dashmap = "5.5.3"
reqwest = { version = "0.11.22", features = ["json"] }
tokio-metrics = { version = "0.3.1", features = [] }
